Bug 1256980 - Make z-index only apply to positioned and grid / flex item frames. r=miko,hiro

Differential Revision: https://phabricator.services.mozilla.com/D81557